build: Updating ini to 1.3.7
* https://npmjs.com/advisories/1589

Additional changes:
* Added the `wikimedia/mediawiki` profile in .eslintrc.json (T262222).
* Removed globals `mw`, `OO`, included via `wikimedia/mediawiki` profile (T262222).
* Dropped the empty global definition in .eslintrc.json.

Change-Id: I127f22a973798897ca3886f1a970f7f113406ea1

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,12 +2,9 @@
 	"root": true,
 	"extends": [
 		"wikimedia/client",
-		"wikimedia/jquery"
+		"wikimedia/jquery",
+		"wikimedia/mediawiki"
 	],
-	"globals": {
-		"OO": false,
-		"mw": false
-	},
 	"rules": {
 		"no-alert": "warn",
 		"vars-on-top": "warn",
